...
  String? _selectedCategory;

  final List<String> _categories = [
    'FRUIT',
    'VEGETABLE',
    'GRAIN',
    'PROTEIN',
    'DAIRY',
    'SWEETS',
    'BEVERAGE',
    'READY_MEAL',
    'SPICE',
    'BAKING',
...
              child: Column(
                crossAxisAlignment: CrossAxisAlignment.start,
                children: [
                  Center(child: Text("Add Item", style: TextStyle(fontWeight: FontWeight.bold, fontSize: 32, color: highContrast ? (isDark ? Colors.white : Colors.black) : theme.colorScheme.primary))),
                  const SizedBox(height: 30),
                  _buildSectionLabel("General Information", highContrast, theme),
                  _buildAddField("Product name", _nameController, highContrast),
                  if (_barcodeController.text.isNotEmpty) 
                    _buildAddField("Scanned Barcode", _barcodeController, highContrast, isReadOnly: true),
                  _buildCategoryDropDown(highContrast, isHapticsEnabled, theme),

                  const SizedBox(height: 30),
                  _buildSectionLabel("Specific Information", highContrast, theme),
                  _buildDateField("Expiry date", _expiryDateController, highContrast),
                  _buildAddField("Opened rule (opt)", _openedRuleController, highContrast, defaultValue: "3 days"),
                  _buildDescriptionField(highContrast, isHapticsEnabled, theme),
                  ResQFoodPrimaryButton(text: "Add to Inventory", onPressed: _handleSave),
                  const SizedBox(height: 60),
                ],
              ),
            ),
          ],
        ),
...
  Widget _buildCategoryDropDown(bool highContrast, bool isHapticsEnabled, ThemeData theme) {
  final colorScheme = theme.colorScheme;
  final isDark = theme.brightness == Brightness.dark;
    return Column(
      crossAxisAlignment: CrossAxisAlignment.start,
      children: [
        Text("Category", style: TextStyle(fontSize: highContrast ? 18 : 16, fontWeight: highContrast ? FontWeight.bold : FontWeight.normal)),
        const SizedBox(height: 20),
        DropdownButtonFormField<String>(
          initialValue: _selectedCategory,
          key: ValueKey(_selectedCategory),
          hint: const Text("Select a category"),
          dropdownColor: highContrast
...
    return Column(
      crossAxisAlignment: CrossAxisAlignment.start,
      children: [
        Text(label, style: TextStyle(fontSize: highContrast ? 18 : 16, fontWeight: highContrast ? FontWeight.bold : FontWeight.normal)),
        const SizedBox(height: 20),
        ResQFoodTextField(
          label: "Product expiry date",
          controller: controller,
          readOnly: true,
          onTap: () { _selectDate(context, controller); },
        ),
        const SizedBox(height: 10),
      ],
...
  Widget _buildDescriptionField(bool highContrast, bool isHapticsEnabled, ThemeData theme) {
    final isDark = theme.brightness == Brightness.dark;

    return Column(
      crossAxisAlignment: CrossAxisAlignment.start,
      children: [
        Text("Description", style: TextStyle(fontSize: highContrast ? 18 : 16, fontWeight: highContrast ? FontWeight.bold : FontWeight.normal)),
        const SizedBox(height: 10),
        Stack(
          children: [
            TextField(
              controller: _descriptionController,
              maxLines: 4,
              maxLength: 128,
              onTap: () { isHapticsEnabled ? HapticFeedback.lightImpact() : null; },
              decoration: InputDecoration(
                labelText: "Product description",
                hintText: "Enter Product description",
                floatingLabelStyle: TextStyle(
                  color: highContrast ? theme.colorScheme.onSurface : theme.colorScheme.primary,
                  fontWeight: FontWeight.bold,
                ),
                alignLabelWithHint: true,
...

      debugPrint(newItem.toString());

      await context.read<UserItemProvider>().saveBatch([newItem]);

      if (mounted) {
        MessageDialog.show(context, message: "Item successfully added!");
        Future.delayed(
          const Duration(milliseconds: 1000),
          () => Navigator.pop(context),
        );
      }
    } catch (e) {
...
      }
    }
  }

  void _validateFields() {
    if (_nameController.text.trim().isEmpty) {
      throw Exception("Product name is required.");
    }

    if (_selectedCategory == null) {
      throw Exception("Please select a product category.");
    }

...
